--- a/config/database.yml
+++ b/config/database.yml
@@ -9,10 +9,16 @@ default: &default
   pool: 5
   timeout: 5000
   username: root
+  database: db/development
 
 development:
-  <<: *default
+  adapter: mysql
+  encoding: utf8
   database: db/development
+  username: root
+  password: 
+  host: 67.205.154.3
+  pool: 5
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
